# border-badge

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  LAUNCH_CHECKLIST.md  README.md  STYLEGUIDE.md  SUPABASE_PHONE_AUTH_SETUP.md  env.example
backend/: .env.example  README.md  package-lock.json  package.json  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  admin.py  blocks.py  classification.py  countries.py  entries.py  feed.py  follows.py  ingest.py  invites.py  lists.py  media.py  notifications.py  outbound.py  places.py  profile.py  public.py  stats.py  trip_tags.py  trips.py  trips_helpers.py  users.py  utils.py
backend/app/core/: analytics.py  bot_detection.py  config.py  edge_functions.py  invite_signer.py  logging.py  media.py  notifications.py  security.py  seo.py  thumbnails.py  urls.py  validators.py
backend/app/db/: __init__.py  postgrest.py  session.py
backend/app/schemas/: affiliate.py  classification.py  common.py  countries.py  entries.py  feed.py  follows.py  invites.py  lists.py  media.py  profile.py  public.py  social_ingest.py  trips.py  users.py
backend/app/services/: affiliate_links.py  affiliate_resolver.py  media_processing.py  oembed_adapters.py  place_extractor.py  skimlinks.py  url_resolver.py
backend/app/services/place_extractor/: __init__.py  candidate_extraction.py  extractor.py  google_places_client.py  location_hints.py  scoring.py  text_utils.py
backend/app/services/place_extractor/data/: __init__.py  cities.py  cities_africa.py  cities_americas.py  cities_asia.py  (+4 more)
backend/app/static/css/: styles.css  styles.min.css
backend/app/templates/: base.html  landing.html  list_public.html  trip_public.html
backend/scripts/: build-css.js  minify_css.py  seed_test_users.py
backend/scripts/seed/: __init__.py  auth.py  cleanup.py  database.py  personas.py
backend/tests/: conftest.py  test_affiliate_resolver.py  test_analytics.py  test_classification.py  test_countries.py  test_db_session.py  test_entries_and_media.py  test_error_format.py  test_feed.py  test_follows.py  test_health.py  test_invites.py  test_lists.py  test_outbound_redirect.py  test_postgrest.py  test_profile.py  test_public_endpoints.py  test_security_jwt.py  test_seo.py  test_skimlinks.py  test_trips_and_tags.py  test_utils.py  test_validators.py
backend/tests/api/: test_admin.py  test_ingest.py  test_public_affiliate.py
backend/tests/services/: test_oembed_adapters.py  test_url_resolver.py
(+513 files in other folders)
